Fix logic error causing certain patterns of table rows to spread themselves over many pages when printing.  b=231823,212984  r=bernd  sr=roc